tests/positive/function_definitions_complex.em
void print(int x) {
}
int compute(int a, int b, int c) {
return a + b + c;
}
int main() {
print(5);
return compute(1, 2, 3);
}