tests/negative/function_calls_typical.em
int add(int a, int b) {
    return a + b;
}
int main() {
    int x = add(1);
    return 0;
}